@@ -1,6 +1,6 @@
 /*
 
-Copyright 2013, Free Software Foundation, Inc.
+Copyright 2013, 2014, Free Software Foundation, Inc.
 
 This file is part of the GNU MP Library test suite.
 
@@ -29,3 +29,6 @@ void testmain (int argc, char **argv);
 void testhalves (int count, void (*tested_fun) (int));
 
 void testfree (void *p);
+
+void
+dump (const char *label, const mpz_t x);
